--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
             <li class="nav-item"></li>
           </ul>
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <button class="btn btn-primary me-md-2" type="button">
+            <!-- MAKE THIS TOGGLE A MODAL SOMEHOW -->
+            <button class="btn btn-primary" type="button" data-bs-target="modal" data-bs-toggle="loginModal">
+              <!-- change toggle modal to ...????????? -->
               Iniciar Sesión
             </button>
             <button class="btn btn-primary" type="button">Cerrar Sesión</button>
@@ -113,7 +115,7 @@
     <!-- -------------------------------->
 
     <!-- page navigation <3 -->
-    <section>
+    <section class="page-navigation">
       <div class="flex-container">
         <div class="menu-item">
           <a href="#home" class="menu__link">
@@ -246,7 +248,7 @@
 
     <section class="my-education" id="education">
       <h2 class="section__title section__title--education">
-        <strong> &lt formación academica &gt </strong>
+        <strong> &lt formación académica &gt </strong>
       </h2>
       <div class="education">
         <div class="course">
