compulsory banner zzz

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       rel="stylesheet"
     />
 
-    
     <!-- fontawesome -->
     <script
       src="https://kit.fontawesome.com/88f4b6eb7c.js"
@@ -66,7 +65,12 @@
           </ul>
           <div class="d-grid gap-2 d-md-flex justify-content-md-end">
             <!-- MAKE THIS TOGGLE A MODAL SOMEHOW -->
-            <button class="btn btn-primary" type="button" data-bs-target="modal" data-bs-toggle="loginModal">
+            <button
+              class="btn btn-primary"
+              type="button"
+              data-bs-target="modal"
+              data-bs-toggle="loginModal"
+            >
               <!-- change toggle modal to ...????????? -->
               Iniciar Sesión
             </button>
@@ -164,6 +168,11 @@
 
     <!-- curriculum -->
 
+    <!-- banner -->
+    <section class="banner p-0">
+      <img class="card-img" src="/assets/img/a4.png" alt="banner" />
+    </section>
+
     <!-- introduction -->
     <section class="introduction" id="home">
       <!-- left side -->
@@ -180,7 +189,7 @@
 
       <!-- right side -->
       <div class="right">
-        <img src="assets/img/pfp.jpg" alt="yo" class="intro__img" />
+        <img src="assets/img/pfp.jpg" alt="pfp" class="intro__img" />
 
         <!-- ICON -->
         <h1>
