--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item"></li>
           </ul>
-          <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+          <div
+            class="d-grid gap-2 d-md-flex justify-content-center flex-row-reverse"
+          >
             <!-- MAKE THIS TOGGLE A MODAL SOMEHOW -->
             <button
               class="btn btn-primary"
@@ -110,6 +112,18 @@
                 href="https://codepen.io/hebelia"
                 target="_blank"
                 ><i class="fa-brands fa-codepen"></i>
+              </a>
+            </button>
+            <button class="btn btn btn-primary" type="button">
+              <a
+                style="
+                  color: #009188;
+                  text-decoration: none;
+                  text-align: center;
+                "
+                href="https://www.instagram.com/hebe.lia/"
+                target="_blank"
+                ><i class="fa-brands fa-instagram"></i>
               </a>
             </button>
           </div>
