--- a/portfolio-front/src/index.html
+++ b/portfolio-front/src/index.html
@@ -26,12 +26,18 @@
       href="assets/img/favicon/favicon-16x16.png"
     />
     <link rel="manifest" href="assets/img/favicon/site.webmanifest" />
+    <!-- animate.css for error page -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 
     <!-- Font -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Ubuntu:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
 
