--- a/index.html
+++ b/index.html
@@ -184,7 +184,17 @@
 
     <!-- banner -->
     <section class="banner p-0">
+      <div>
       <img class="card-img" src="/assets/img/a4.png" alt="banner" />
+    </div>
+      <div class="col-1">
+        <button type="button" class="btn btn-close-white">
+          <i class="fa-solid fa-pencil"></i>
+        </button>
+        <button type="button" class="btn btn-close-white">
+          <i class="fa-solid fa-trash-can"></i>
+        </button>
+      </div>
     </section>
 
     <!-- introduction -->
@@ -316,7 +326,7 @@
     </section>
 
     <!-- SKILLS CIRCLES --COMPLETE!!!!!!! -->
-    <section class="my-skills " id="skills">
+    <section class="my-skills" id="skills">
       <h2 class="section__title section__title--skills">
         <strong> &lt mis habilidades &gt </strong>
       </h2>
