--- a/inputs-modals.html
+++ b/inputs-modals.html
@@ -51,6 +51,17 @@
 
         <div>
 
+          <circle-progress
+          [percent]="skill.percentage"
+          [radius]="100"
+          [outerStrokeWidth]="16"
+          [innerStrokeWidth]="8"
+          [outerStrokeColor]="'#04beb2 '"
+          [innerStrokeColor]="'#04beb2 '"
+          [animation]="true"
+          [animationDuration]="1000"
+          [animateTitle]="skill.name"
+        ></circle-progress>
 
 
 
